<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="?android:attr/actionBarSize"
     android:layout_marginRight="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/send_notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_anchorGravity="center_horizontal"
            app:layout_anchor="@id/title"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/notification_title"
            android:hint="@string/send_notification_title_field"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/notification_content" android:hint="@string/send_notification_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/send_notification_send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="center_horizontal"
            android:id="@+id/notification_send"
            style="@style/Button_global"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
