...
    <string name="delete_successfull">Event successfully deleted !</string>
    <string name="send_notification_title">Create a notification</string>
    <string name="send_notification_title_field">Title</string>
    <string name="send_notification_content">Notification content</string>
    <string name="send_notification_send_button">Send</string>
    <string name="send_notification_nav_item_activity_event">Send Notification</string>
    <string name="send_notification_success">Successfully published the notification !</string>
    <string name="send_notification_fails">Cannot publish notifications. Try again later!</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="key_settings_notifications_switch">settings_notifications_switch</string>
    <string name="map_location_of_event_null">The organizer hasn\'t provided the location of the event</string>
    <string name="join_switch_button">join</string>
    <string name="unjoined_switch_button">You have unjoined</string>
    <string name="joined_switch_button">You have joined</string>
...
    <string name="schedule_create_form_hint_duration">Duration</string>
    <string name="create_schedule_item_value_missing">The following field cannot be empty</string>
    <string name="create_schedule_item_value_length">The following field needs to be longer</string>
    <string name="schedule_create_form_hint_begin_time">Begin time of the scheduled element</string>
    <string name="event_image">Event image</string>
    <string name="remove_button">Remove</string>
    <string name="send_notification_form_error">Field cannot be empty</string>
    <string name="congratulations">Congratulations, you have found the secret credits ! We really hope that you enjoy &app_name; !</string>
    <string name="credits">This app was proposed to you by the Susanfe team, including :</string>
    <string name="names_of_the_authors">Antoine Crettenand\nLouis Vialar\nNicolas d\'Argenlieu\nRobin Zbinden\nStanislas Jouven\nTimothée Floure\nValentin Quelquejay</string>

    <!-- Edition Fragment text-->
    <string name="map_edition_add_overlay">Add overlay edge</string>
...
