...
            android:title="@string/admin_main_nav_item_activity_event" />
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/ic_account_circle_24dp"
            android:title="@string/user_management_nav_item_activity_event" />
        <item
            android:id="@+id/nav_send_news"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/send_news_nav_item_activity_event" />
        <item
            android:id="@+id/nav_send_notification"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/send_notification_nav_item_activity_event" />
        <item
            android:id="@+id/nav_edit_schedule"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/edit_schedule_nav_item_activity_event" />
...
