...
                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                app:srcCompat="@drawable/ic_launcher_foreground"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:id="@+id/event_picking_logo"
                                android:clickable="true"
                                android:layout_marginStart="@dimen/default_medium_margin" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
...
                            <androidx.appcompat.widget.AppCompatImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                style="@style/Button_account_widget"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:id="@+id/event_picking_login_account"
                                android:layout_marginEnd="@dimen/default_medium_margin"
                                />

                            <TextView
                                android:id="@+id/event_picking_help_text"
                                android:layout_width="match_parent"
...
