...
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/dicaprio_meme"
                android:id="@+id/dicaprio_meme_image"
                android:layout_margin="@dimen/default_small_padding"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
...
